# AgentManager

./: .env.example  .gitignore  AGENTS.md  PROJECT_STATUS.md  Project_Plan.md  README.md  TODO.md  orkun.md
agentmanager-core/: .env.example  alembic.ini  flags.json  pyproject.toml  requirements.txt
agentmanager-core/.github/workflows/: test.yml
agentmanager-core/alembic/: env.py
agentmanager-core/alembic/versions/: 85f1655dc71c_initial.py
agentmanager-core/src/: config.py  cron.py  features.py  main.py  mcp_server.py  router.py  session.py  templates.py  ws_manager.py
agentmanager-core/src/agents/: base.py  continuous.py  enums.py  registry.py  store.py
agentmanager-core/src/api/: middleware.py  routes.py  schemas.py
agentmanager-core/src/auth/: keys.py  middleware.py  service.py
agentmanager-core/src/billing/: __init__.py  quota.py  tracker.py
agentmanager-core/src/bot/: command_language.py  config.py  handlers.py  main.py
agentmanager-core/src/cli/: codex_handler.py  main.py
agentmanager-core/tests/: conftest.py  test_agent_store.py  test_agents.py  test_api_integration.py  test_auth.py  test_billing.py  test_bot.py  test_cli.py  test_commands.py  test_continuous.py  test_cot_log.py  test_cron.py  test_delegation.py  test_detector.py  test_features.py  test_mcp.py  test_mcp_client.py  test_memory.py  test_middleware.py  test_monitoring.py  test_providers.py  test_rate_limit.py  test_recovery.py  test_repo_map.py  test_router.py  test_session.py  test_skills.py  test_task_queue.py  test_templates.py  test_ws.py
agentmanager-plugins/: package.json
(+75 files in other folders)
