[project]
name = "agentmanager-core"
version = "0.1.0"
description = "AgentManager Core — Multi-Agent Orchestration Platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "click>=8.1.0",
    "httpx>=0.28.0",
    "websockets>=14.0",
    "openai>=1.55.0",
    "mcp>=1.0.0",
    "sse-starlette>=1.8.2",
]

[project.scripts]
agentmanager = "src.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
